rdma-core: Autospec creation for update from version 15.1 to version 16.1
Alaa Hleihel (3):
      travis: Add RedHat and SuSE rpmbuild support
      buildlib/cbuild: Add Ubuntu artful
      Fix compilation warnings when NDEBUG is set

Ariel Levkovich (1):
      mlx5: Fix wrong bitmap table allocation size calculation

Artemy Kovalyov (10):
      verbs: Hardware tag matching
      verbs: Expose tag matching capabilities
      verbs: Introduce tag matching SRQ
      mlx5: Add support to tag matching SRQ type
      verbs: Tag matching list manipulation interface
      mlx5: Tag matching post list operation
      mlx5: Tag matching list operation completions
      verbs: Tag matching send interface
      verbs: Tag matching receive interface
      mlx5: Tag matching receive implementation

Benjamin Drung (19):
      debian: Let lintian ignore example udev rule
      debian: Move perl:Depends from ibverbs-providers to rdma-core
      debian: Do not build ibacm for non-Linux architectures
      debian: Do not require valgrind if not available
      debian: Update changelog to include Debian upload
      debian: Let libibverbs1 16 break ibverbs-providers 15
      debian: Replace priority extra by optional
      debian: Relax dh-systemd build dependency
      debian: Bump Standards-Version to 4.1.1
      debian: Drop lintian overrides for false positives
      debian: Run wrap-and-sort
      debian: Don't install disabled providers on archs that miss coherent DMA
      Add myself as Debian packaging maintainer
      debian: Include architecture.mk for DEB_HOST_ARCH definition
      debian: Add alpha, hppa, sh4 as non-coherent DMA archs
      debian: Do not require valgrind on x32
      debian: Add m68k as non-coherent DMA architecture
      debian: Mark libraries as Multi-Arch: same
      debian: Update changelog to include Debian uploads

Bryan Tan (3):
      vmw_pvrdma: Add SRQ support
      vmw_pvrdma: Update rdma-core to latest kernel pvrdma-abi.h header
      vmw_pvrdm

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/archive/v15.1.tar.gz
+url = https://github.com/linux-rdma/rdma-core/releases/download/v16.1/rdma-core-16.1.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 
@@ -43,6 +43,8 @@ skip_tests = false
 so_to_lib = false
 # configure build for avx2
 use_avx2 = false
+# configure build for avx512
+use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
