--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/releases/download/v17/rdma-core-17.tar.gz
+url = https://github.com/linux-rdma/rdma-core/releases/download/v17.1/rdma-core-17.1.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 
