[update to 19] srp_daemon: Increase buffer size to avoid snprintf overflow
Andrew Boyer (1):
      librdmacm: Avoid crash if rdma_disconnect() is called incorrectly

Ariel Levkovich (13):
      verbs: Add missing documentation on IBV_ACCESS_ZERO_BASED MRs
      verbs: Add device memory capabilities to query_device_cap_ex
      verbs: Add device memory (DM) support in libibverbs
      mlx5: Device memory support
      verbs: Fix wrong clean up flow in ibv_rc_pingpong
      verbs: Add device memory support in rc_pingpong example
      mlx5: Adding support for device minimum inline header requirement
      mlx5: Add mlx5dv support for device memory
      verbs: Add GRE flow specification filter
      verbs: Add MPLS flow specification filter
      mlx5: Report MPLS tunnel offload capabilities through mlx5 direct verbs
      verbs: Allow creation of inner MPLS flow spec
      mlx5: Allocate huge page chunks only when needed

Benjamin Drung (13):
      debian: Update copyright for kernel-headers/*
      debian: Override package-does-not-install-examples
      Fix typo "interchangable" -> "interchangeable"
      debian: Let libibverbs1 17 break ibverbs-providers 16
      debian: Do not require valgrind on riscv64
      debian: Whitelist architectures that support valgrind
      debian: Whitelist coherent DMA supporting architectures
      debian: Bump Standards-Version to 4.1.4
      debian: Let libibverbs1 18 break ibverbs-providers 17
      Fix bad whatis entries in man pages
      verbs: Fix spelling mistakes in ibv_create_flow_action.3
      debian: Run wrap-and-sort
      debian: Use versioned Breaks & Replaces for ibverbs-providers

Bharat Potnuri (1):
      cxgb4: add new device pci ids.

Bodong Wang (2):
      verbs: Extend verbs packet pacing QP rate limiting with burst info
      mlx5: Support ibv_modify_qp_rate_limit

Boris Pismenny (1):
      verbs: Add a man page for flow_action_esp

Doug Ledford (3):
      Merge pull request #298 from yishaih/mlx4_tso
      

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/releases/download/v17.1/rdma-core-17.1.tar.gz
+url = https://github.com/linux-rdma/rdma-core/releases/download/v19/rdma-core-19.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 
@@ -17,6 +17,8 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# this package is a library compatability package and only ships versioned library files
+compat = false
 # set conservative build flags
 conservative_flags = false
 # pass -ffast-math to compiler
