--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/releases/download/v20/rdma-core-20.tar.gz
+url = https://github.com/linux-rdma/rdma-core/releases/download/v20.1/rdma-core-20.1.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 
@@ -21,6 +21,8 @@ broken_parallel_build = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
