--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/releases/download/v20.1/rdma-core-20.1.tar.gz
+url = https://github.com/linux-rdma/rdma-core/releases/download/v21/rdma-core-21.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 
@@ -12,7 +12,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
