--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/releases/download/v22/rdma-core-22.tar.gz
+url = https://github.com/linux-rdma/rdma-core/releases/download/v22.1/rdma-core-22.1.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 
