rdma-core: Autospec creation for version 25.1

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/releases/download/v25.0/rdma-core-25.0.tar.gz
+url = https://github.com/linux-rdma/rdma-core/releases/download/v25.1/rdma-core-25.1.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
