--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,9 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/releases/download/v25.1/rdma-core-25.1.tar.gz
+url = https://github.com/linux-rdma/rdma-core/archive/v26.0/rdma-core-26.0.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
+domain = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +18,7 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
