--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/archive/v27.0/rdma-core-27.0.tar.gz
+url = https://github.com/linux-rdma/rdma-core/archive/v29.0/rdma-core-29.0.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
