--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/archive/v37.0/rdma-core-37.0.tar.gz
+url = https://github.com/linux-rdma/rdma-core/archive/v37.1/rdma-core-37.1.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
