--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/archive/v45.0/rdma-core-45.0.tar.gz
+url = https://github.com/linux-rdma/rdma-core/archive/v46.0/rdma-core-46.0.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 domain = 
@@ -60,7 +60,7 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
