--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/archive/v47.0/rdma-core-47.0.tar.gz
+url = https://github.com/linux-rdma/rdma-core/archive/v50.0/rdma-core-50.0.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 domain = 
@@ -9,6 +9,8 @@ alias =
 [autospec]
 # build 32 bit libraries
 32bit = false
+# allow windows executables (*.exe, *.dll) to be packaged
+allow_exe = false
 # allow package to build with test failures
 allow_test_failures = false
 # unset %build ld_as_needed variable
@@ -59,6 +61,8 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
+# configure build for apx
+use_apx = true
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
