rdma-core: Autospec creation for update from version 51.1 to version 52.0
Bar Friedman (1):
      tests: Add mixed MR test

Chengchang Tang (2):
      libhns: Assign doorbell to zero when allocate it
      libhns: Fix owner bit when SQ wraps around in new IO

Daniel Kranzdorf (2):
      providers/efa: Set remote access error for bad address status
      providers/efa: Add new completion status for unknown peer

Daria Velikovsky (1):
      pyverbs: Extend WQ to enable creation with CQEX

Elyashiv Cohen (2):
      tests: Fix expected value after test_and_set atomic op
      pyverbs: Make Mlx5DmOpAddr read and write functions atomic

Junxian Huang (8):
      Update kernel headers
      libhns: Support DSCP in userspace
      libhns: Remove unused return value
      libhns: Fix several context locks issue
      libhns: Add pthread_spin_destroy()
      libhns: Clean up signed-unsigned mix with relational issue
      libhns: Optimize cqe inline for srq
      libhns: Add check for input param of hnsdv_query_device()

Leon Romanovsky (1):
      Update library version to be 52.0

Liu, Changcheng (4):
      verbs: fix typo to describe ibv_reg_dm_mr
      libibverbs: define ETHERNET_LL_SIZE and unify usage
      mlx4: use ETHERNET_LL_SIZE to unify mac addr length
      mlx5: use ETHERNET_LL_SIZE to unify mac addr length

Maksym Chukhrii (1):
      Improve python searching logic in buildscripts.

Mark Zhang (1):
      librdmacm: Fix an overflow bug in qsort comparison function

Maxim Chicherin (1):
      tests: Extend DM tests

Michael Margolin (4):
      providers/efa: Rename bad op device completion status
      Update kernel headers
      providers/efa: Add unsolicited RDMA write w/ imm. receive
      pyverbs/efa: Support unsolicited RDMA write w/ imm. receive

Mike Marciniszyn (1):
      providers/irdma: Handle OS page size of 64k

Mustafa Ismail (1):
      providers/irdma: Do not override the raw op type in CQE

Oren Sidi (1):
      librdmacm: Ack the pending event in sync

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/archive/v51.1/rdma-core-51.1.tar.gz
+url = https://github.com/linux-rdma/rdma-core/archive/v52.0/rdma-core-52.0.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = false
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
