--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/archive/v52.0/rdma-core-52.0.tar.gz
+url = https://github.com/linux-rdma/rdma-core/archive/v53.0/rdma-core-53.0.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 domain = 
@@ -17,6 +17,8 @@ allow_test_failures = false
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
 autoupdate = true
+# try to use mock short circuit to avoid full rebuilds
+avoid_rebuild = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
