rdma-core: Autospec creation for update from version 57.0 to version 58.0
Daisuke Matsuda (5):
      Update kernel headers
      libibverbs: Define ODP capabilities for RDMA FLUSH and ATOMIC WRITE
      pyverbs: Add ODP capabilities for RDMA FLUSH and ATOMIC WRITE
      tests: ATOMIC WRITE test with ODP
      tests: RDMA FLUSH test with ODP

Gregory Linschitz (1):
      libibumad: Skip Zero GUIDs local port interfaces

Junxian Huang (5):
      libhns: Add debug log for lock-free mode
      libhns: Fix ret not assigned in create srq()
      libhns: Fix pad refcnt leaking in error flow of create qp/cq/srq
      libhns: Fix freeing pad without checking refcnt
      verbs: Assign ibv srq->pd when creating SRQ

Leon Romanovsky (1):
      Update library version to be 58.0

Maor Gottlieb (2):
      mlx5: Expose BlueFlame capability
      pyverbs: Expose BlueFlame capability

Michael Margolin (1):
      efa: Fix work request index double use

Sylvain Didelot (1):
      libibverbs: Fix typos in comments in verbs.h

William Tu (1):
      util: Fix mmio read on ARM

Yehuda Yitschak (1):
      efa: Add WQE length to post_send tracepoint

daiyanlong (4):
      mthca: Fix malloc() return value without detecting null pointer
      rsocket: Fix use of uninitialized ret
      ibdiag_sa: Fix memory leak in sa_query()
      rping: Fix typos in comments

wenglianfa (3):
      libhns: Add initial support for HNS LTTng tracing
      libhns: Add tracepoint for HNS RoCE I/O
      libhns: Fix double-free of rinl buf->wqe list

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rdma-core
-url = https://github.com/linux-rdma/rdma-core/archive/v57.0/rdma-core-57.0.tar.gz
+url = https://github.com/linux-rdma/rdma-core/archive/v58.0/rdma-core-58.0.tar.gz
 archives = 
 giturl = https://github.com/linux-rdma/rdma-core.git
 domain = 
@@ -37,6 +37,8 @@ fast-math = false
 full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
+# require license subpackage for successful build
+has_license = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
